--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-nb
+<!DOCTYPE html>
+<body>
+  <div class='box'>
+    <div>111</div>
+    <div>222</div>
+  </div>
+  <div  class="btn" >
+    
+    测试</div>
+ 
+</body>
+<style>
+  .box {
+    margin: 360px 100px;
+    font-size: 52px;
+    text-align: center;
+  }
+  .box .text {
+  }
+  .btn {
+		width: 686px;
+		height: 88px;
+		background: #2182FE;
+		border-radius: 8px;
+		margin: 0 auto;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 30px;
+		color: #FFFFFF;
+		margin-top: 30px;
+	}
+</style>
+<html>
